@@ -327,8 +327,7 @@ void passmonth(char &clearformess,char canseethings)
       savehighscore(END_WON);
       reset();
       viewhighscores();
-      endwin();
-      exit(0);
+      end_game();
    }
 
    //CONTROL LONG DISBANDS
@@ -359,8 +358,7 @@ void passmonth(char &clearformess,char canseethings)
       savehighscore(END_DISBANDLOSS);
       reset();
       viewhighscores();
-      endwin();
-      exit(0);
+      end_game();
    }
 
    //UPDATE THE WORLD IN CASE THE LAWS HAVE CHANGED
